[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.109.0",
    "langchain>=0.1.0",
    "neo4j>=5.14.1",
    "numpy>=1.26.2",
    "pydantic>=2.5.1",
    "uvicorn>=0.25.0",
    "transformers>=4.32.0", # For Hugging Face pipeline integration
    "langchain-openai>=0.0.2",
    "opentelemetry-api>=1.22.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool]
qa_model = "distilbert-base-uncased-distilled-squad" # Specify QA model for easy updates
